--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
             </div>
             
             <div class="link-item">
-		 <a href="hhttps://www.salafiyahkajen.id/ppdb/" target="_blank" class="link-full">
+		 <a href="https://www.salafiyahkajen.id/ppdb/" target="_blank" class="link-full">
                 <h2>SPMB</h2>
                 <p>Sistem Penerimaan Murid Baru</p>
             </div>
@@ -162,4 +162,5 @@
         </div>
     </div>
 </body>
+
 </html>
