--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
     <div class="container">
         <h1>SAKAPOL</h1>
-	<img src="logo-sekolah.png" alt="Logo MA Salafiyah Kajen" class="school-logo">
+	<img src="Logo Salafiyah.png" alt="Logo MA Salafiyah Kajen" class="school-logo">
         <p class="subtitle">Portal Pelayanan Akses Cepat dan Terpadu MA Salafiyah Kajen</p>
         
         <div class="links-container">
@@ -164,3 +164,4 @@
 </body>
 
 </html>
+
