--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
         </div>
         
         <p class="description">
-            Halaman ini dibuat untuk tugas Pelatihan Coding dan Kecerdasan Artifisial, LP Ma'arij Kadupalem Pali.
+            Halaman ini dibuat untuk tugas Pelatihan Coding dan Kecerdasan Artifisial, LP Ma'arij Kadupalem Pati.
         </p>
         
         <div class="footer">
@@ -164,4 +164,5 @@
 </body>
 
 </html>
+
 
